<resources>
    <string name="app_name">Shopping App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="social">Social</string>
    <string name="x">X</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_an_naccount">Create an\nAccount</string>
    <string name="name">Name</string>
    <string name="email_id">Email ID</string>
    <string name="contact_no">Contact No.</string>
    <string name="password">Password</string>
    <string name="i_agree_with">I agree with</string>
    <string name="terms_amp_conditions"><u><![CDATA[terms & conditions]]></u></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in_to_your_naccount">Sign in to your\nAccount</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_with">Login with</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register_now"><u>Register Now</u></string>
    <string name="log_out">Log Out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search">Search...</string>
    <string name="web_client_id">819809283806-ip8o990tijoi321h80qvphsfi5sp40e3.apps.googleusercontent.com</string>
</resources>