<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="myViewModel"
            type="com.example.shoppingapp.viewmodel.SIgnInViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.SignInFragment"
        android:background="@color/grey">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:background="@drawable/layout_bg">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp">

                <TextView
                    android:id="@+id/tv_signInToYourAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_medium"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/sign_in_to_your_naccount"
                    android:textColor="@color/red"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_emailId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_signInToYourAccount"
                    android:layout_marginTop="30dp"
                    android:text="@string/email_id"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_emailId"
                    android:text="@={myViewModel.email}"
                    android:backgroundTint="@color/black"
                    android:drawableEnd="@drawable/ic_user"
                    android:drawableTint="@color/red"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/dark_grey"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/et_email"
                    android:layout_marginTop="20dp"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_password"
                    android:backgroundTint="@color/black"
                    android:text="@={myViewModel.password}"
                    android:drawableEnd="@drawable/ic_security"
                    android:drawableTint="@color/red"
                    android:inputType="textPassword"
                    android:textColor="@color/dark_grey"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red"
                    android:text="@string/forgot_password"
                    android:layout_below="@id/et_password"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:id="@+id/ll5"
                    android:layout_marginTop="40dp"
                    android:layout_below="@id/tv_forgotPassword">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_with"
                        android:textColor="@color/black"/>

                    <LinearLayout
                        android:layout_marginTop="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:id="@+id/bt_google"
                            android:padding="10dp"
                            android:background="@drawable/bt_bg"
                            android:src="@drawable/ic_google" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingTop="20dp"
                        android:gravity="center">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/don_t_have_an_account"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/tv_registerNow"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:text="@string/register_now"
                            android:textColor="@color/red"
                            android:textStyle="bold" />

                    </LinearLayout>

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_signIn1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_below="@id/ll5"
                    android:onClick="@{()->myViewModel.signIn()}"
                    android:background="@drawable/button_bg"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textSize="16sp" />

            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>

</layout>