<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity"
        android:background="@color/grey">

        <LinearLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:paddingStart="15dp"
            android:paddingTop="10dp"
            android:paddingEnd="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/social"
                android:textColor="@color/white"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:fontFamily="@font/gilroy_medium"
                android:text="@string/x"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:layout_below="@id/appBar">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/bt_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="17sp" />

        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragmentContainerView"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_below="@id/ll2"
            android:layout_height="match_parent"
            app:defaultNavHost="true"
            app:navGraph="@navigation/nav_graph" />

    </RelativeLayout>

</layout>