<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="myViewModel"
            type="com.example.shoppingapp.viewmodel.SignUpFragmentViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        tools:context=".ui.SignUpFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:background="@drawable/layout_bg">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="25dp">

                <TextView
                    android:id="@+id/tv_createAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_medium"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/create_an_naccount"
                    android:textColor="@color/red"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_createAccount"
                    android:layout_marginTop="20dp"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_name"
                    android:backgroundTint="@color/black"
                    android:text="@={myViewModel.name}"
                    android:drawableEnd="@drawable/ic_user"
                    android:drawableTint="@color/red"
                    android:inputType="textPersonName"
                    android:textColor="@color/dark_grey"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_emailId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/et_name"
                    android:layout_marginTop="20dp"
                    android:text="@string/email_id"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_emailId"
                    android:backgroundTint="@color/black"
                    android:text="@={myViewModel.email}"
                    android:drawableEnd="@drawable/ic_mail"
                    android:drawableTint="@color/red"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/dark_grey"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_contactNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/et_email"
                    android:layout_marginTop="20dp"
                    android:text="@string/contact_no"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_contactNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_contactNo"
                    android:backgroundTint="@color/black"
                    android:text="@={myViewModel.contactNo}"
                    android:drawableEnd="@drawable/ic_call"
                    android:drawableTint="@color/red"
                    android:inputType="phone"
                    android:textColor="@color/dark_grey"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/et_contactNo"
                    android:layout_marginTop="20dp"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_password"
                    android:backgroundTint="@color/black"
                    android:text="@={myViewModel.password}"
                    android:drawableEnd="@drawable/ic_security"
                    android:drawableTint="@color/red"
                    android:inputType="textPassword"
                    android:textColor="@color/dark_grey"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/ll3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/et_password"
                    android:layout_marginTop="10dp">

                    <CheckBox
                        android:id="@+id/cb_terms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/red"
                        android:onClick="@{()->myViewModel.setChecked()}"
                        android:text="@string/i_agree_with"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/terms_amp_conditions"
                        android:textColor="@color/red"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ll3"
                    android:layout_marginTop="10dp"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_have_an_account"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tv_signIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="4dp"
                        android:text="Sign In!"
                        android:textColor="@color/red"
                        android:textStyle="bold" />

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_signUp2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ll4"
                    android:layout_marginTop="30dp"
                    android:onClick="@{()->myViewModel.signUp()}"
                    android:background="@drawable/button_bg"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textSize="16sp" />

            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>

</layout>